--- a/news.html
+++ b/news.html
@@ -1,12 +1,100 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/news.css">
   <title>Document</title>
 </head>
 <body>
-  
+  <!-- ここからヘッダー -->
+  <div class="header">
+    <h1 class="header__title">
+      <a href="index.html" class="link">TECH</a>
+    </h1>
+    <nav class="header__nav">
+      <ul class="header-title__list">
+        <li class="header__tittle__list__item">
+          <a href="index.html" class="link">ホーム</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="service.html" class="link">事業内容</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="news.html" class="link">ニュース</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="blog.html" class="link">社員ブログ</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="company.html" class="link">会社概要</a>
+          </li>
+        <li class="header__tittle__list__item">
+          <a href="recruit.html" class="link">採用情報</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="contact.html" class="link">お問い合わせ</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+<!-- ここまでヘッダー -->
+<!-- ここからmv -->
+  <div class="mv">
+    <div class="mv__text">
+      <p class="mv__text1">ニュース</p>
+    </div>
+  </div>
+  <!-- ここまでmv -->
+
+  <section class="section__news">
+    <div class="section__news__wrap">
+      <div class="section__news__list">
+        <article class="section__news__item">
+          <a href="#" class="section__news__item__link">
+            <span class="section__news__item__date">2019/07/17</span>
+            <h3 class="section__news__item__text">会社を創業しました。</h3>
+          </a>
+        </article>
+        <article class="section__news__item">
+          <a href="#" class="section__news__item__link">
+            <span class="section__news__item__date">2020/04/01</span>
+            <h3 class="section__news__item__text">資金調達を行いました。</h3>
+          </a>
+        </article>
+        <article class="section__news__item">
+          <a href="#" class="section__news__item__link">
+            <span class="section__news__item__date">2020/10/01</span>
+            <h3 class="section__news__item__text">東京新聞に掲載されました。</h3>
+          </a>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <section class="section__contact">
+    <h1 class="section__contact-ttl">お問い合わせ</h1>
+    <p class="section__contact-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+    <a href="contact.html" class="btn">お問い合わせ</a>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-inner wrap">
+      <small class="footer-copyright">&copy; 2020 TECH inc.</small>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="index.html" class="fooetr-list">ホーム</a></li>
+          <li class="footer-nav-item"><a href="service.html" class="fooetr-list">事業内容</a></li>
+          <li class="footer-nav-item"><a href="news.html" class="fooetr-list">ニュース</a></li>
+          <li class="footer-nav-item"><a href="blog.html" class="fooetr-list">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="company.html" class="fooetr-list">会社概要</a></li>
+          <li class="footer-nav-item"><a href="recruit.html" class="fooetr-list">採用情報</a></li>
+          <li class="footer-nav-item"><a href="contact.html" class="fooetr-list">お問い合わせ</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
+  </main>
 </body>
 </html>
