--- a/blog.html
+++ b/blog.html
@@ -1,12 +1,133 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/blog.css">
+  <link rel="stylesheet" href="css/reset.css">
   <title>Document</title>
 </head>
 <body>
-  
+    <!-- ここからヘッダー -->
+    <div class="header">
+      <h1 class="header__title">
+        <a href="index.html" class="link">TECH</a>
+      </h1>
+      <nav class="header__nav">
+        <ul class="header-title__list">
+          <li class="header__tittle__list__item">
+            <a href="index.html" class="link">ホーム</a>
+          </li>
+          <li class="header__tittle__list__item">
+            <a href="service.html" class="link">事業内容</a>
+          </li>
+          <li class="header__tittle__list__item">
+            <a href="news.html" class="link">ニュース</a>
+          </li>
+          <li class="header__tittle__list__item">
+            <a href="blog.html" class="link">社員ブログ</a>
+          </li>
+          <li class="header__tittle__list__item">
+            <a href="company.html" class="link">会社概要</a>
+          </li>
+          <li class="header__tittle__list__item">
+            <a href="recruit.html" class="link">採用情報</a>
+          </li>
+          <li class="header__tittle__list__item">
+            <a href="contact.html" class="link">お問い合わせ</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+      <!-- ここまでヘッダー -->
+      <!-- ここからmv -->
+        <div class="mv">
+          <div class="mv__top">
+            <p class="mv__top__ttl">社員ブログ</p>
+          </div>
+        </div>
+      <!-- ここまでmv -->
+      <!-- ここからブログ内容 -->
+      <div class="blog wrap">
+        <article class="blog__item">
+          <a href="#" class="blog__item__link">
+            <img src="img/blog.png" alt="会社を創業した理由" />
+          </a>
+          <p class="blog__item-date">2019/07/17</p>
+          <h3 class="blog__item-ttl">
+            <a href="#">会社を創業した理由</a>
+          </h3>
+        </article>
+        <article class="blog__item">
+          <a href="#" class="blog__item__link">
+            <img src="img/blog.png" alt="ITエンジニアを育成する最強メソッド" />
+          </a>
+          <p class="blog__item-date">2019/11/11</p>
+          <h3 class="blog__item-ttl">
+            <a href="#">ITエンジニアを育成する最強メソッド</a>
+          </h3>
+        </article>
+        <article class="blog__item">
+          <a href="#" class="blog__item__link">
+            <img src="img/blog.png" alt="コーチングによるモチベーション向上理論" />
+          </a>
+          <p class="blog__item-date">2020/08/01</p>
+          <h3 class="blog__item-ttl">
+            <a href="#">コーチングによるモチベーション向上理論</a>
+          </h3>
+        </article>
+        <article class="blog__item">
+          <a href="#" class="blog__item__link">
+            <img src="img/blog.png" alt="会社を創業した理由" />
+          </a>
+          <p class="blog__item-date">2019/07/17</p>
+          <h3 class="blog__item-ttl">
+            <a href="#">会社を創業した理由</a>
+          </h3>
+        </article>
+        <article class="blog__item">
+          <a href="#" class="blog__item__link">
+            <img src="img/blog.png" alt="会社を創業した理由" />
+          </a>
+          <p class="blog__item-date">2019/07/17</p>
+          <h3 class="blog__item-ttl">
+            <a href="#">会社を創業した理由</a>
+          </h3>
+        </article>
+        <article class="blog__item">
+          <a href="#" class="blog__item__link">
+            <img src="img/blog.png" alt="会社を創業した理由" />
+          </a>
+          <p class="blog__item-date">2019/07/17</p>
+          <h3 class="blog__item-ttl">
+            <a href="#">会社を創業した理由</a>
+          </h3>
+        </article>
+      </div>
+      <!-- ここまでがブログ内容 -->
+      <section class="section__contact">
+        <h1 class="section__contact-ttl">お問い合わせ</h1>
+        <p class="section__contact-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+        <a href="contact.html" class="btn">お問い合わせ</a>
+      </section>
+      <!-- footer -->
+      <footer class="footer">
+        <div class="footer-inner wrap">
+          <small class="footer-copyright">&copy; 2020 TECH inc.</small>
+          <nav class="footer-nav">
+            <ul class="footer-nav-list">
+              <li class="footer-nav-item"><a href="index.html" class="fooetr-list">ホーム</a></li>
+              <li class="footer-nav-item"><a href="service.html" class="fooetr-list">事業内容</a></li>
+              <li class="footer-nav-item"><a href="news.html" class="fooetr-list">ニュース</a></li>
+              <li class="footer-nav-item"><a href="blog.html" class="fooetr-list">社員ブログ</a></li>
+              <li class="footer-nav-item"><a href="company.html" class="fooetr-list">会社概要</a></li>
+              <li class="footer-nav-item"><a href="recruit.html" class="fooetr-list">採用情報</a></li>
+              <li class="footer-nav-item"><a href="contact.html" class="fooetr-list">お問い合わせ</a></li>
+            </ul>
+          </nav>
+        </div>
+      </footer>
+      <!-- footer end -->
 </body>
 </html>
