--- a/company.html
+++ b/company.html
@@ -1,12 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/company.css">
+  <link rel="stylesheet" href="css/reset.css">
   <title>Document</title>
 </head>
 <body>
+  <!-- ここからヘッダー -->
+  <div class="header">
+    <h1 class="header__title">
+      <a href="index.html" class="link">TECH</a>
+    </h1>
+    <nav class="header__nav">
+      <ul class="header-title__list">
+        <li class="header__tittle__list__item">
+          <a href="index.html" class="link">ホーム</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="service.html" class="link">事業内容</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="news.html" class="link">ニュース</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="blog.html" class="link">社員ブログ</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="company.html" class="link">会社概要</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="recruit.html" class="link">採用情報</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="contact.html" class="link">お問い合わせ</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <!-- ここまでヘッダー -->
+  <!-- ここからmv -->
+  <div class="mv">
+    <div class="mv__top">
+      <p class="mv__top__ttl">会社概要</p>
+    </div>
+  </div>
+  <!-- ここまでmv -->
+      <div class="company ptb-m wrap-s">
+        <table class="company-info">
+          <tr>
+            <th class="company-info-name">会社名</th>
+            <td class="company-info-data">株式会社TECH</td>
+          </tr>
+          <tr>
+            <th class="company-info-name">代表者</th>
+            <td class="company-info-data">山田 太郎</td>
+          </tr>
+          <tr>
+            <th class="company-info-name">所在地</th>
+            <td class="company-info-data">東京都渋谷区神宮前</td>
+          </tr>
+          <tr>
+            <th class="company-info-name">設立</th>
+            <td class="company-info-data">2019/07/17</td>
+          </tr>
+          <tr>
+            <th class="company-info-name">従業員数</th>
+            <td class="company-info-data">100人</td>
+          </tr>
+          <tr>
+            <th class="company-info-name">資本金</th>
+            <td class="company-info-data">1000万円</td>
+          </tr>
+        </table>
+      </div>
+
+  <section class="section__contact">
+    <h1 class="section__contact-ttl">お問い合わせ</h1>
+    <p class="section__contact-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+    <a href="contact.html" class="btn">お問い合わせ</a>
+  </section>
   
+  <footer class="footer">
+    <div class="footer-inner wrap">
+      <small class="footer-copyright">&copy; 2020 TECH inc.</small>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="index.html" class="fooetr-list">ホーム</a></li>
+          <li class="footer-nav-item"><a href="service.html" class="fooetr-list">事業内容</a></li>
+          <li class="footer-nav-item"><a href="news.html" class="fooetr-list">ニュース</a></li>
+          <li class="footer-nav-item"><a href="blog.html" class="fooetr-list">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="company.html" class="fooetr-list">会社概要</a></li>
+          <li class="footer-nav-item"><a href="recruit.html" class="fooetr-list">採用情報</a></li>
+          <li class="footer-nav-item"><a href="contact.html" class="fooetr-list">お問い合わせ</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
 </body>
 </html>
