--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,95 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/contact.css">
   <title>Document</title>
 </head>
 <body>
-  
+  <!-- ここからヘッダー -->
+  <div class="header">
+    <h1 class="header__title">
+      <a href="index.html" class="link">TECH</a>
+    </h1>
+    <nav class="header__nav">
+      <ul class="header-title__list">
+        <li class="header__tittle__list__item">
+          <a href="index.html" class="link">ホーム</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="service.html" class="link">事業内容</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="news.html" class="link">ニュース</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="blog.html" class="link">社員ブログ</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="company.html" class="link">会社概要</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="recruit.html" class="link">採用情報</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="contact.html" class="link">お問い合わせ</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <!-- ここまでヘッダー -->
+  <!-- ここからmv -->
+  <div class="mv">
+    <div class="mv__top">
+      <p class="mv__top__ttl">お問い合わせ</p>
+    </div>
+  </div>
+  <!-- ここまでmv -->
+  <!-- ここから問い合わせ -->
+  <div class="contact ptb-m wrap-s">
+    <form class="contact-form" action="index.html" method="post">
+      <div class="contact-form-item">
+        <label class="contact-form-item-name" for="company">会社名</label>
+        <input type="text" id="company" class="contact-form-item-input">
+      </div>
+      <div class="contact-form-item">
+        <label class="contact-form-item-name" for="name">お名前<span class="contact-form-item-required">*</span></label>
+        <input type="text" id="name" class="contact-form-item-input" required>
+      </div>
+      <div class="contact-form-item">
+        <label class="contact-form-item-name" for="email">メールアドレス<span class="contact-form-item-required">*</span></label>
+        <input type="email" id="email" class="contact-form-item-input" required>
+      </div>
+      <div class="contact-form-item">
+        <label class="contact-form-item-name" for="comment">お問い合わせ内容<span
+            class="contact-form-item-required">*</span></label>
+        <textarea id="comment" rows="8" cols="80" class="contact-form-item-textarea" required></textarea>
+      </div>
+      <input type="submit" value="お申し込み" class="contact-form-submit">
+    </form>
+  </div>
+  <!-- ここまで問い合わせ -->
+  <!-- ここからfooter -->
+  <footer class="footer">
+    <div class="footer-inner wrap">
+      <small class="footer-copyright">&copy; 2020 TECH inc.</small>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="index.html" class="fooetr-list">ホーム</a></li>
+          <li class="footer-nav-item"><a href="service.html" class="fooetr-list">事業内容</a></li>
+          <li class="footer-nav-item"><a href="news.html" class="fooetr-list">ニュース</a></li>
+          <li class="footer-nav-item"><a href="blog.html" class="fooetr-list">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="company.html" class="fooetr-list">会社概要</a></li>
+          <li class="footer-nav-item"><a href="recruit.html" class="fooetr-list">採用情報</a></li>
+          <li class="footer-nav-item"><a href="contact.html" class="fooetr-list">お問い合わせ</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
+  <!-- ここまでfooter -->
+  </main>
 </body>
 </html>
