--- a/index.html
+++ b/index.html
@@ -12,32 +12,64 @@
   <!-- ここからヘッダー -->
   <div class="header">
     <h1 class="header__title">
-      <a href="index.html">TECH</a>
+      <a href="index.html" class="link">TECH</a>
     </h1>
-    <nav>
+    <nav class="header__nav">
       <ul class="header-title__list">
         <li class="header__tittle__list__item">
-          <a href="index.html">ホーム</a>
+          <a href="index.html" class="link">ホーム</a>
         </li>
         <li class="header__tittle__list__item">
-          <a href="service.html">事業内容</a>
+          <a href="service.html" class="link">事業内容</a>
         </li>
         <li class="header__tittle__list__item">
-          <a href="news.html">ニュース</a>
+          <a href="news.html" class="link">ニュース</a>
         </li>
         <li class="header__tittle__list__item">
-          <a href="blog.html">社員ブログ</a>
+          <a href="blog.html" class="link">社員ブログ</a>
         </li>
         <li class="header__tittle__list__item">
-          <a href="company.html">会社概要</a>
+          <a href="company.html" class="link">会社概要</a>
         </li>
         <li class="header__tittle__list__item">
-          <a href="recruit.html">採用情報</a>
+          <a href="recruit.html" class="link">採用情報</a>
         </li>
         <li class="header__tittle__list__item">
-          <a href="contact.html">お問い合わせ</a>
+          <a href="contact.html" class="link">お問い合わせ</a>
         </li>
       </ul>
+    </nav>
+    <div class="menu" id="menu">
+      <span class="menu-line-top"></span>
+      <span class="menu-line-middle"></span>
+      <span class="menu-line-bottom"></span>
+    </div>
+    <nav class="drawer-nav" id="drawer-nav">
+    <nav class="header__nav">
+      <ul class="header-title__list">
+        <li class="header__tittle__list__item">
+          <a href="index.html" class="link">ホーム</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="service.html" class="link">事業内容</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="news.html" class="link">ニュース</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="blog.html" class="link">社員ブログ</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="company.html" class="link">会社概要</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="recruit.html" class="link">採用情報</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="contact.html" class="link">お問い合わせ</a>
+        </li>
+      </ul>
+    </nav>
     </nav>
   </div>
   <!-- ここまでヘッダー -->
@@ -58,8 +90,150 @@
   </div>
     <!--ここまで内容1 株式会社TECHの想い -->
     <!--ここから内容2　サービス-->
-    <div>
-
-    </div>
+    <section class="section__service">
+      <h2 class="section__service__title">サービス</h2>
+      <div class="section__service__card">
+        <section class="section__service__card__item">
+          <div class="section__service__card__item__img">
+            <img src="img/service1.png" alt="IT人材育成事業" />
+          </div>
+          <h3 class="section__service__card__ttl">IT人材育成事業</h3>
+          <p class="section__service__card__text">
+            これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。
+          </p>
+        </section>
+        <section class="section__service__card__item">
+          <div class="sectio__servicen__card__item__img">
+            <img src="img/service2.png" alt="コーチング事業" />
+          </div>
+          <h3 class="section__service__card__ttl">コーチング事業</h3>
+          <p class="section__service__card__text">
+            目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。
+          </p>
+        </section>
+        <section class="section__service__card__item">
+          <div class="section__service__card__item__img">
+            <img src="img/service3.png" alt="ITコンサル事業" />
+          </div>
+          <h3 class="section__service__card__ttl">ITコンサル事業</h3>
+          <p class="section__service__card__text">
+            経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。
+          </p>
+        </section>
+        <section class="section__service__card__item">
+          <div class="section__service__card__item__img">
+            <img src="img/service4.png" alt="デジタルトランスフォーメーション事業" />
+          </div>
+          <h3 class="section__service__card__ttl">デジタルトランスフォーメーション事業</h3>
+          <p class="section__service__card__text">
+            人々の生活をよりよいものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。
+          </p>
+        </section>
+      </div>
+      <a href="service.html" class="btn">サービス一覧をみる</a>
+    </section>
+    <!--ここまでサービス-->
+    <!-- ここから内容3　ニュース -->
+    <section class="section__news">
+      <div class="section__news__wrap">
+        <div class="section__news__ttl">
+          <h2 class="section__news__ttl__title">ニュース</h2>
+          <a href="news.html" class="btn">ニュース一覧をみる</a>
+        </div>
+        <div class="section__news__list">
+          <article class="section__news__item">
+            <a href="#" class="section__news__item__link">
+              <span class="section__news__item__date">2019/07/17</span>
+              <h3 class="section__news__item__text">会社を創業しました。</h3>
+            </a>
+          </article>
+          <article class="section__news__item">
+            <a href="#" class="section__news__item__link">
+              <span class="section__news__item__date">2020/04/01</span>
+              <h3 class="section__news__item__text">資金調達を行いました。</h3>
+            </a>
+          </article>
+          <article class="section__news__item">
+            <a href="#" class="section__news__item__link">
+              <span class="section__news__item__date">2020/10/01</span>
+              <h3 class="section__news__item__text">東京新聞に掲載されました。</h3>
+            </a>
+          </article>
+        </div>
+      </div>
+    </section>
+    <!-- ここまでニュース -->
+    <!-- ここから内容4　ブログ -->
+    <section class="section__blog">
+      <h2 class="section__blog__ttl">社員ブログ</h2>
+      <div class="section__blog__list">
+        <article class="section__blog__item">
+          <a href="#" class="section__blog__item__link">
+            <img src="img/blog.png" alt="会社を創業した理由" />
+          </a>
+          <p class="section__blog__item__date">2019/07/17</p>
+          <h3 class="section__blog__item__ttl">
+            <a href="#">会社を創業した理由</a>
+          </h3>
+        </article>
+        <article class="section__blog__item">
+          <a href="#" class="section__blog__item__link">
+            <img src="img/blog.png" alt="ITエンジニアを育成する最強メソッド" />
+          </a>
+          <div class="section__blog__item__info">
+            <p class="section__blog__item__date">2019/11/11</p>
+          </div>
+          <h3 class="section__blog__item__ttl">
+            <a href="#">ITエンジニアを育成する最強メソッド</a>
+          </h3>
+        </article>
+        <article class="section__blog__item">
+          <a href="#" class="section__blog__item__link">
+            <img src="img/blog.png" alt="コーチングによるモチベーション向上理論" />
+          </a>
+          <p class="section__blog__item__date">2020/08/01</p>
+          <h3 class="section__blog__item__ttl">
+            <a href="#">コーチングによるモチベーション向上理論</a>
+          </h3>
+        </article>
+      </div>
+      <a href="blog.html" class="btn">社員ブログ一覧をみる</a>
+    </section>
+    <!-- ここから内容5　会社概要　採用情報 -->
+    <section class="section__menu">
+      <div class="section__menu-red">
+        <a href="company.html" class="section__menu-color-white">会社概要</a>
+      </div>
+      <div class="section__menu-grey">
+        <a href="recruit.html" class="section__menu-color-white">採用情報</a>
+      </div>
+    </section>
+    　<!-- ここまで内容5　会社概要　採用情報 -->
+      <!-- ここから内容6　お問い合わせ -->
+    <section class="section__contact">
+      <h1 class="section__contact-ttl">お問い合わせ</h1>
+      <p class="section__contact-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+      <a href="contact.html" class="btn">お問い合わせ</a>
+    </section>
+    <!-- ここまで内容5　お問い合わせ -->
+      <!-- footer -->
+      <footer class="footer">
+        <div class="footer-inner wrap">
+          <small class="footer-copyright">&copy; 2020 TECH inc.</small>
+          <nav class="footer-nav">
+            <ul class="footer-nav-list">
+              <li class="footer-nav-item"><a href="index.html" class="fooetr-list">ホーム</a></li>
+              <li class="footer-nav-item"><a href="service.html" class="fooetr-list">事業内容</a></li>
+              <li class="footer-nav-item"><a href="news.html" class="fooetr-list">ニュース</a></li>
+              <li class="footer-nav-item"><a href="blog.html" class="fooetr-list">社員ブログ</a></li>
+              <li class="footer-nav-item"><a href="company.html" class="fooetr-list">会社概要</a></li>
+              <li class="footer-nav-item"><a href="recruit.html" class="fooetr-list">採用情報</a></li>
+              <li class="footer-nav-item"><a href="contact.html" class="fooetr-list">お問い合わせ</a></li>
+            </ul>
+          </nav>
+        </div>
+      </footer>
+      <!-- footer end -->
 </body>
 </html>
+
