--- a/recruit.html
+++ b/recruit.html
@@ -4,9 +4,122 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/recruit.css">
+  <link rel="stylesheet" href="css/reset.css">
   <title>Document</title>
 </head>
 <body>
-  
+  <!-- ここからヘッダー -->
+  <div class="header">
+    <h1 class="header__title">
+      <a href="index.html" class="link">TECH</a>
+    </h1>
+    <nav class="header__nav">
+      <ul class="header-title__list">
+        <li class="header__tittle__list__item">
+          <a href="index.html" class="link">ホーム</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="service.html" class="link">事業内容</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="news.html" class="link">ニュース</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="blog.html" class="link">社員ブログ</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="company.html" class="link">会社概要</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="recruit.html" class="link">採用情報</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="contact.html" class="link">お問い合わせ</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <!-- ここまでヘッダー -->
+  <!-- ここからmv -->
+        <div class="mv">
+          <div class="mv__top">
+            <p class="mv__top__ttl">採用情報</p>
+          </div>
+        </div>
+  <!-- ここまでmv -->
+  <!-- ここから内容 -->
+  <div class="recruit">
+    <section class="recruit_newgraduate">
+      <h2 class="recruit_ttl">新卒採用</h2>
+      <p class="recruit_description">私たちはデジタルトランスフォーメーションを推進する優秀な人材を求めています。</p>
+      <table class="recruit_list">
+        <tr>
+          <th class="recruit_list_contents">内容</th>
+          <td class="recruit_list_item">ITコンサルと開発</td>
+        </tr>
+        <tr>
+          <th class="recruit_list_contents">勤務地</th>
+          <td class="recruit_list_item">東京都渋谷区神宮前</td>
+        </tr>
+        <tr>
+          <th class="recruit_list_contents">給与</th>
+          <td class="recruit_list_item">30万円〜</td>
+        </tr>
+        <tr>
+          <th class="recruit_list_contents">福利厚生 </th>
+          <td class="recruit_list_item">家賃補助</td>
+        </tr>
+      </table>
+    </section>
+        <section class="recruit_newgraduate">
+          <h2 class="recruit_ttl">キャリア採用</h2>
+          <p class="recruit_description">私たちはデジタルトランスフォーメーションを推進する優秀な人材を求めています。</p>
+          <table class="recruit_list">
+            <tr>
+              <th class="recruit_list_contents">内容</th>
+              <td class="recruit_list_item">ITコンサルと開発</td>
+            </tr>
+            <tr>
+              <th class="recruit_list_contents">勤務地</th>
+              <td class="recruit_list_item">東京都渋谷区神宮前</td>
+            </tr>
+            <tr>
+              <th class="recruit_list_contents">給与</th>
+              <td class="recruit_list_item">50万円〜</td>
+            </tr>
+            <tr>
+              <th class="recruit_list_contents">福利厚生 </th>
+              <td class="recruit_list_item">家賃補助</td>
+            </tr>
+          </table>
+        </section>
+  </div>
+  <!-- ここまで内容 -->
+  <!-- ここから問い合わせ -->
+    <section class="section__contact">
+      <h1 class="section__contact-ttl">お問い合わせ</h1>
+      <p class="section__contact-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+      <a href="contact.html" class="btn">お問い合わせ</a>
+    </section>
+  <!-- ここまで問い合わせ -->
+  <!-- ここからフッター -->
+  <footer class="footer">
+    <div class="footer-inner wrap">
+      <small class="footer-copyright">&copy; 2020 TECH inc.</small>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="index.html" class="fooetr-list">ホーム</a></li>
+          <li class="footer-nav-item"><a href="service.html" class="fooetr-list">事業内容</a></li>
+          <li class="footer-nav-item"><a href="news.html" class="fooetr-list">ニュース</a></li>
+          <li class="footer-nav-item"><a href="blog.html" class="fooetr-list">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="company.html" class="fooetr-list">会社概要</a></li>
+          <li class="footer-nav-item"><a href="recruit.html" class="fooetr-list">採用情報</a></li>
+          <li class="footer-nav-item"><a href="contact.html" class="fooetr-list">お問い合わせ</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
+  <!-- ここまでフッター -->
 </body>
 </html>
