--- a/service.html
+++ b/service.html
@@ -1,12 +1,117 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="jp">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css\service.css">
+  <link rel="stylesheet" href="css\reset.css">
   <title>Document</title>
 </head>
 <body>
-  
+  <!-- ここからヘッダー -->
+  <div class="header">
+    <h1 class="header__title">
+      <a href="index.html" class="link">TECH</a>
+    </h1>
+    <nav class="header__nav">
+      <ul class="header-title__list">
+        <li class="header__tittle__list__item">
+          <a href="index.html" class="link">ホーム</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="service.html" class="link">事業内容</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="news.html" class="link">ニュース</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="blog.html" class="link">社員ブログ</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="company.html" class="link">会社概要</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="recruit.html" class="link">採用情報</a>
+        </li>
+        <li class="header__tittle__list__item">
+          <a href="contact.html" class="link">お問い合わせ</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  <!-- ここまでヘッダー -->
+  <!-- ここからmv -->
+  <div class="mv">
+      <div class="mv__top">
+        <p class="mv__top__ttl">事業内容</p>
+      </div>
+  </div>
+  <!-- ここまでmv -->
+    <!--ここからサービス-->
+    <div class="service ptb-m wrap">
+      <div class="service-list">
+        <section class="service-item">
+          <div class="service-item-img">
+            <img src="img/service1.png" alt="IT人材育成事業">
+          </div>
+          <div class="service-item-detail">
+            <h2 class="service-item-ttl">IT人材育成事業</h2>
+            <p class="service-item-depiction">これまでに培った教育手法を生かして、短期間で即戦力のIT人材を育成します。</p>
+          </div>
+        </section>
+        <section class="service-item">
+          <div class="service-item-img">
+            <img src="img/service2.png" alt="コーチング事業">
+          </div>
+          <div class="service-item-detail">
+            <h2 class="service-item-ttl">コーチング事業</h2>
+            <p class="service-item-depiction">目標達成を最短で実現するために、プロのコーチによるマンツーマンのサポートを実施します。</p>
+          </div>
+        </section>
+        <section class="service-item">
+          <div class="service-item-img">
+            <img src="img/service3.png" alt="ITコンサル事業">
+          </div>
+          <div class="service-item-detail">
+            <h2 class="service-item-ttl">ITコンサル事業</h2>
+            <p class="service-item-depiction">経営戦略にIT戦略を策定し、システム開発の提案やシステムの最適化を通じて、企業の経営をサポートします。</p>
+          </div>
+        </section>
+        <section class="service-item">
+          <div class="service-item-img">
+            <img src="img/service4.png" alt="デジタルトランスフォーメーション事業">
+          </div>
+          <div class="service-item-detail">
+            <h2 class="service-item-ttl">デジタルトランスフォーメーション事業</h2>
+            <p class="service-item-depiction">人々の生活をよりよいものに変革するために様々なデジタル技術を活用し、革新的なソリューションやサービスを生み出します。</p>
+          </div>
+        </section>
+      </div>
+    </div>
+  <!--ここまでサービス-->
+
+  <section class="section__contact">
+    <h1 class="section__contact-ttl">お問い合わせ</h1>
+    <p class="section__contact-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
+    <a href="contact.html" class="btn">お問い合わせ</a>
+  </section>
+
+  <footer class="footer">
+    <div class="footer-inner wrap">
+      <small class="footer-copyright">&copy; 2020 TECH inc.</small>
+      <nav class="footer-nav">
+        <ul class="footer-nav-list">
+          <li class="footer-nav-item"><a href="index.html" class="fooetr-list">ホーム</a></li>
+          <li class="footer-nav-item"><a href="service.html" class="fooetr-list">事業内容</a></li>
+          <li class="footer-nav-item"><a href="news.html" class="fooetr-list">ニュース</a></li>
+          <li class="footer-nav-item"><a href="blog.html" class="fooetr-list">社員ブログ</a></li>
+          <li class="footer-nav-item"><a href="company.html" class="fooetr-list">会社概要</a></li>
+          <li class="footer-nav-item"><a href="recruit.html" class="fooetr-list">採用情報</a></li>
+          <li class="footer-nav-item"><a href="contact.html" class="fooetr-list">お問い合わせ</a></li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
 </body>
 </html>
