--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="C:\Users\81806\Desktop\20210906yoshizawa\css\reset.css">
-  <link rel="stylesheet" href="C:\Users\81806\Desktop\20210906yoshizawa\css\index.css">
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/reset.css">
   <title>Document</title>
 </head>
 <body>
