--- a/blog.html
+++ b/blog.html
@@ -9,38 +9,40 @@
   <title>Document</title>
 </head>
 <body>
-    <!-- ここからヘッダー -->
-    <div class="header">
-      <h1 class="header__title">
-        <a href="index.html" class="link">TECH</a>
-      </h1>
-      <nav class="header__nav">
-        <ul class="header-title__list">
-          <li class="header__tittle__list__item">
-            <a href="index.html" class="link">ホーム</a>
-          </li>
-          <li class="header__tittle__list__item">
-            <a href="service.html" class="link">事業内容</a>
-          </li>
-          <li class="header__tittle__list__item">
-            <a href="news.html" class="link">ニュース</a>
-          </li>
-          <li class="header__tittle__list__item">
-            <a href="blog.html" class="link">社員ブログ</a>
-          </li>
-          <li class="header__tittle__list__item">
-            <a href="company.html" class="link">会社概要</a>
-          </li>
-          <li class="header__tittle__list__item">
-            <a href="recruit.html" class="link">採用情報</a>
-          </li>
-          <li class="header__tittle__list__item">
-            <a href="contact.html" class="link">お問い合わせ</a>
-          </li>
-        </ul>
-      </nav>
+  <!-- ここからヘッダー -->
+  <div class="header">
+    <h1 class="header__title">
+      <a href="index.html" class="link">TECH</a>
+    </h1>
+    <nav class="header__nav">
+      <ul class="header-title__list">
+        <li class="header__tittle__list__item"><a href="index.html" class="link">ホーム</a></li>
+        <li class="header__tittle__list__item"><a href="service.html" class="link">事業内容</a></li>
+        <li class="header__tittle__list__item"><a href="news.html" class="link">ニュース</a></li>
+        <li class="header__tittle__list__item"><a href="blog.html" class="link">社員ブログ</a></li>
+        <li class="header__tittle__list__item"><a href="company.html" class="link">会社概要</a></li>
+        <li class="header__tittle__list__item"><a href="recruit.html" class="link">採用情報</a></li>
+        <li class="header__tittle__list__item"><a href="contact.html" class="link">お問い合わせ</a></li>
+      </ul>
+    </nav>
+    <div class="menu" id="menu">
+      <span class="menu-line-top"></span>
+      <span class="menu-line-middle"></span>
+      <span class="menu-line-bottom"></span>
     </div>
-      <!-- ここまでヘッダー -->
+    <nav class="drawer-nav" id="drawer-nav">
+      <ul class="drawer-nav-list">
+        <li class="drawer-nav-item"><a href="index.html">ホーム</a></li>
+        <li class="drawer-nav-item"><a href="service.html">事業内容</a></li>
+        <li class="drawer-nav-item"><a href="news.html">ニュース</a></li>
+        <li class="drawer-nav-item"><a href="blog.html">社員ブログ</a></li>
+        <li class="drawer-nav-item"><a href="company.html">会社概要</a></li>
+        <li class="drawer-nav-item"><a href="recruit.html">採用情報</a></li>
+        <li class="drawer-nav-item"><a href="contact.html">お問い合わせ</a></li>
+      </ul>
+    </nav>
+  </div>
+  <!-- ここまでヘッダー -->
       <!-- ここからmv -->
         <div class="mv">
           <div class="mv__top">
@@ -129,5 +131,6 @@
         </div>
       </footer>
       <!-- footer end -->
+      <script src="js/main.js"></script>
 </body>
 </html>
