--- a/company.html
+++ b/company.html
@@ -16,27 +16,29 @@
     </h1>
     <nav class="header__nav">
       <ul class="header-title__list">
-        <li class="header__tittle__list__item">
-          <a href="index.html" class="link">ホーム</a>
-        </li>
-        <li class="header__tittle__list__item">
-          <a href="service.html" class="link">事業内容</a>
-        </li>
-        <li class="header__tittle__list__item">
-          <a href="news.html" class="link">ニュース</a>
-        </li>
-        <li class="header__tittle__list__item">
-          <a href="blog.html" class="link">社員ブログ</a>
-        </li>
-        <li class="header__tittle__list__item">
-          <a href="company.html" class="link">会社概要</a>
-        </li>
-        <li class="header__tittle__list__item">
-          <a href="recruit.html" class="link">採用情報</a>
-        </li>
-        <li class="header__tittle__list__item">
-          <a href="contact.html" class="link">お問い合わせ</a>
-        </li>
+        <li class="header__tittle__list__item"><a href="index.html" class="link">ホーム</a></li>
+        <li class="header__tittle__list__item"><a href="service.html" class="link">事業内容</a></li>
+        <li class="header__tittle__list__item"><a href="news.html" class="link">ニュース</a></li>
+        <li class="header__tittle__list__item"><a href="blog.html" class="link">社員ブログ</a></li>
+        <li class="header__tittle__list__item"><a href="company.html" class="link">会社概要</a></li>
+        <li class="header__tittle__list__item"><a href="recruit.html" class="link">採用情報</a></li>
+        <li class="header__tittle__list__item"><a href="contact.html" class="link">お問い合わせ</a></li>
+      </ul>
+    </nav>
+    <div class="menu" id="menu">
+      <span class="menu-line-top"></span>
+      <span class="menu-line-middle"></span>
+      <span class="menu-line-bottom"></span>
+    </div>
+    <nav class="drawer-nav" id="drawer-nav">
+      <ul class="drawer-nav-list">
+        <li class="drawer-nav-item"><a href="index.html">ホーム</a></li>
+        <li class="drawer-nav-item"><a href="service.html">事業内容</a></li>
+        <li class="drawer-nav-item"><a href="news.html">ニュース</a></li>
+        <li class="drawer-nav-item"><a href="blog.html">社員ブログ</a></li>
+        <li class="drawer-nav-item"><a href="company.html">会社概要</a></li>
+        <li class="drawer-nav-item"><a href="recruit.html">採用情報</a></li>
+        <li class="drawer-nav-item"><a href="contact.html">お問い合わせ</a></li>
       </ul>
     </nav>
   </div>
@@ -99,5 +101,6 @@
       </nav>
     </div>
   </footer>
+  <script src="js/main.js"></script>
 </body>
 </html>
