--- a/index.html
+++ b/index.html
@@ -138,32 +138,32 @@
       <h2 class="section__blog__ttl">社員ブログ</h2>
       <div class="section__blog__list">
         <article class="section__blog__item">
-          <a href="#" class="section__blog__item__link">
-            <img src="img/blog.png" alt="会社を創業した理由" />
+          <a href="#">
+            <img class="blog_img" src="img/blog.png" alt="会社を創業した理由" />
           </a>
           <p class="section__blog__item__date">2019/07/17</p>
           <h3 class="section__blog__item__ttl">
-            <a href="#">会社を創業した理由</a>
+            <a href="#" class="blog_link" >会社を創業した理由</a>
           </h3>
         </article>
         <article class="section__blog__item">
-          <a href="#" class="section__blog__item__link">
-            <img src="img/blog.png" alt="ITエンジニアを育成する最強メソッド" />
+          <a href="#">
+            <img class="blog_img" src="img/blog.png" alt="ITエンジニアを育成する最強メソッド" />
           </a>
           <div class="section__blog__item__info">
             <p class="section__blog__item__date">2019/11/11</p>
           </div>
           <h3 class="section__blog__item__ttl">
-            <a href="#">ITエンジニアを育成する最強メソッド</a>
+            <a href="#" class="blog_link">ITエンジニアを育成する最強メソッド</a>
           </h3>
         </article>
         <article class="section__blog__item">
-          <a href="#" class="section__blog__item__link">
-            <img src="img/blog.png" alt="コーチングによるモチベーション向上理論" />
+          <a href="#">
+            <img class="blog_img" src="img/blog.png" alt="コーチングによるモチベーション向上理論" />
           </a>
           <p class="section__blog__item__date">2020/08/01</p>
           <h3 class="section__blog__item__ttl">
-            <a href="#">コーチングによるモチベーション向上理論</a>
+            <a href="#" class="blog_link">コーチングによるモチベーション向上理論</a>
           </h3>
         </article>
       </div>
