--- a/blog.html
+++ b/blog.html
@@ -81,29 +81,29 @@
         </article>
         <article class="blog__item">
           <a href="#" >
-            <img src="img/blog.png" alt="会社を創業した理由" />
+            <img src="img/blog.png" alt="プログラミング言語習得論" />
           </a>
           <p class="blog__item-date">2019/07/17</p>
           <h3 class="blog__item-ttl">
-            <a href="#" class="blog__item__link">会社を創業した理由</a>
+            <a href="#" class="blog__item__link">プログラミング言語習得論</a>
           </h3>
         </article>
         <article class="blog__item">
           <a href="#">
-            <img src="img/blog.png" alt="会社を創業した理由" />
+            <img src="img/blog.png" alt="エンジニア採用における注意点" />
           </a>
           <p class="blog__item-date">2019/07/17</p>
           <h3 class="blog__item-ttl">
-            <a href="#" class="blog__item__link">会社を創業した理由</a>
+            <a href="#" class="blog__item__link">エンジニア採用における注意点</a>
           </h3>
         </article>
         <article class="blog__item">
           <a href="#">
-            <img src="img/blog.png" alt="会社を創業した理由" />
+            <img src="img/blog.png" alt="今年の抱負" />
           </a>
           <p class="blog__item-date">2019/07/17</p>
           <h3 class="blog__item-ttl">
-            <a href="#" class="blog__item__link">会社を創業した理由</a>
+            <a href="#" class="blog__item__link">今年の抱負</a>
           </h3>
         </article>
       </div>
