修正内容が分かるコミットメッセージ

--- a/service.html
+++ b/service.html
@@ -92,13 +92,12 @@
       </div>
     </div>
   <!--ここまでサービス-->
-
   <section class="section__contact">
     <h1 class="section__contact-ttl">お問い合わせ</h1>
     <p class="section__contact-text">お仕事のご依頼や採用に関してはお問い合わせにて承っております。</p>
     <a href="contact.html" class="btn">お問い合わせ</a>
   </section>
-
+<!-- footer -->
   <footer class="footer">
     <div class="footer-inner wrap">
       <small class="footer-copyright">&copy; 2020 TECH inc.</small>
@@ -115,6 +114,7 @@
       </nav>
     </div>
   </footer>
+  <!-- footer end -->
   <script src="js/main.js"></script>
 </body>
 </html>
